--- a/Analysis_churn_dataset.ipynb
+++ b/Analysis_churn_dataset.ipynb
@@ -1207,7 +1207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1227,7 +1227,7 @@
     "import pandas as pd\n",
     "\n",
     "# Load your dataset\n",
-    "churn_df_normalized = pd.read_csv('Churn_Modelling.csv')  # Replace with the correct file path\n",
+    "churn_df_normalized = pd.read_csv('Churn_Modelling.csv')  # Replace with the correct file path in case you are trying to run on other device and your are not collaborated with me in git hub\n",
     "\n",
     "# Ensure the columns exist in the dataset\n",
     "selected_columns = ['CreditScore', 'Age', 'Balance', 'EstimatedSalary', 'Exited']\n",
